<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.MostViewedHelperClass.MostViewed">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/most_viewed_view_all_back_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:onClick="most_viewed_back_click"
                android:padding="15dp"
                android:src="@drawable/general_back_icon" />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_viewed"
            android:textSize="30sp"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/card1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:padding="25dp"
                    android:text="@string/jee_main"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="jee_main_on_click_expand"
                    android:padding="20dp"
                    android:text="@string/expand"
                    android:textColor="@color/colorAccent" />


            </RelativeLayout>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/card2">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:padding="25dp"
                    android:text="@string/neet_exam"
                    android:textSize="25sp"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentRight="true"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="neet_exam_on_click_expand"
                    android:padding="20dp"
                    android:text="@string/expand"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/card3">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:padding="25dp"
                    android:text="@string/gate_exam"
                    android:textSize="25sp"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentRight="true"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="gate_exam_on_click_expand"
                    android:padding="20dp"
                    android:text="@string/expand"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/card4">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:padding="25dp"
                    android:text="@string/upsc_exam"
                    android:textSize="25sp"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentRight="true"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="sans-serif-medium"
                    android:padding="20dp"
                    android:onClick="upsc_exam_on_click_expand"
                    android:text="@string/expand"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/card1">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:padding="25dp"
                    android:text="@string/cat_exam"
                    android:textSize="25sp"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentRight="true"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="sans-serif-medium"
                    android:padding="20dp"
                    android:onClick="cat_exam_on_click_expand"
                    android:text="@string/expand"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/card2">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:padding="25dp"
                    android:text="@string/ssc_exam"
                    android:textSize="25sp"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentRight="true"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="ssc_exam_on_click_expand"
                    android:padding="20dp"
                    android:text="@string/expand"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/card3">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:padding="25dp"
                    android:text="@string/ibps_exam"
                    android:textSize="25sp"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentRight="true"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="sans-serif-medium"
                    android:padding="20dp"
                    android:text="@string/expand"
                    android:onClick="ibps_exam_on_click_expand"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>